clean variable that bug start the system

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,13 +68,21 @@
         <%= link_to 'Bikes', bikes_path, :class => "dropbtn"%>
         <div class="dropdown-content">
          <div class="columni">
-          <a href="#"><%= BrandBikeDb.find(2).brand_name %></a>
-          <a href="#"><%= BrandBikeDb.find(3).brand_name %></a>
-          <a href="#"><%= BrandBikeDb.find(4).brand_name %></a>
-          <a href="#"><%= BrandBikeDb.find(5).brand_name %></a>
-          <a href="#"><%= BrandBikeDb.find(6).brand_name %></a>
-          <a href="#"><%= BrandBikeDb.find(7).brand_name %></a>
-          <a href="#"><%= BrandBikeDb.find(8).brand_name %></a>
+          <a href="#">BMW</a>
+          <a href="#">Ducati</a>
+          <a href="#">Harley-Davidson</a>
+          <a href="#">Honda</a>
+          <a href="#">Kawazaki</a>
+          <a href="#">Suzuki</a>
+          <a href="#">Yamaha</a>
+
+          <!-- <a href="#"><= BrandBikeDb.find(2).brand_name %></a>
+          <a href="#"><= BrandBikeDb.find(3).brand_name %></a>
+          <a href="#"><= BrandBikeDb.find(4).brand_name %></a>
+          <a href="#"><= BrandBikeDb.find(5).brand_name %></a>
+          <a href="#"><= BrandBikeDb.find(6).brand_name %></a>
+          <a href="#"><= BrandBikeDb.find(7).brand_name %></a>
+          <a href="#"><= BrandBikeDb.find(8).brand_name %></a> -->
         </div>
         <div class="columni">
           <a href="#">Cruiser</a>
