edit bike edit page

--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -16,7 +16,7 @@
 
   <p>
     <%= f.label :brand %><br>
-    <%= f.select :brand, [[BrandBikeDb.find(2).brand_name, BrandBikeDb.find(2).brand_name],[BrandBikeDb.find(3).brand_name, BrandBikeDb.find(3).brand_name],['Harley-Davidson', "Harley-Davidson"], ['Honda', "Honda"], ['Suzuki', "Suzuki"],['Kawasaki', "Kawasaki"],['Yamaha', "Yamaha"]]%>
+    <%= f.select :brand, [['BMW', "BMW"],['Ducati', "Ducati"],['Harley-Davidson', "Harley-Davidson"], ['Honda', "Honda"], ['Suzuki', "Suzuki"],['Kawasaki', "Kawasaki"],['Yamaha', "Yamaha"]]%>
   </p>
  
   <p>
