--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -31,10 +31,10 @@
       <td><%= bike.weight_lb %></td>
       <td><%= bike.price_usd %></td>
       <td><%= bike.year %></td>
-      <td><%= link_to 'Edit', edit_bike_path(bike) %></td>
+      <!--<td><%= link_to 'Edit', edit_bike_path(bike) %></td>
       <td><%= link_to 'Destroy', bike_path(bike),
               method: :delete,
-              data: { confirm: 'Are you sure?' } %></td>   
+              data: { confirm: 'Are you sure?' } %></td>   -->
     </tr>
   <% end %>
   </tbody>
