add multipart to bike for file upload

--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -4,7 +4,7 @@
   <%= @bike.bike_name.squish.downcase.tr(" ","") %>
 
 </p>
-<%= form_for(@bike), html: { multipart: true} do |f| %> <!--use multipart when upload file -->
+<%= form_for @bike, :html => { :multipart => true} do |f| %> <!--use multipart when upload file -->
   <p>
     <%= f.submit %>
   </p>
