remove picture from forum

--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -17,7 +17,7 @@
        </div>
        <div>
          <li>Type > <%= @bike.bike_type %></li>
-         <li>Cylindricity > <%= @bike.cylinder_cc %> CC</li>
+         <li>Displacement > <%= @bike.cylinder_cc %> CC</li>
          <li>Power > <%= @bike.power_hp %> HP</li>
          <li>Weight > <%= @bike.weight_kg %>kg</li>
          <li>Price > $<%= @bike.price_usd %></li>
