add mail address

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,6 +118,6 @@
   </body>
 
   <footer>
-  	<p>Full throttle 2017  |  all right reserved</p>
+  	<p>Full throttle 2018  |  all right reserved | contact : full.throttle.motorcycle@gmail.com</p>
   </footer>
 </html>
