--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -25,7 +25,7 @@
       </p>
 
       <p>Input a picture that will be used for the intro :</p>
-      <%= f.file_field :pictureintro %><br>
+      <%= f.file_field :picturetop %><br>
 
       <p>Input a the picture of the bike in png with transparency :</p>
       <%= f.file_field :picturebike %><br>
