--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,9 +1,12 @@
 <!-- bike picture -->
 
 
-<div style="background: no-repeat url(<%= @bike.pictureintro %>) 50% / 100%;position: relative;">
-   <img src="<%= @bike.pictureintro %>" style="height:100%; width: 100%; object-fit: contain;visibility: hidden;vertical-align: top;" />
-   
+
+
+<div style="background: no-repeat url(<%= rails_blob_url(@bike.picturetop)%>) 50% / 100%;position: relative;">
+   <img src="<%= rails_blob_url(@bike.picturetop)%>" style="height:100%; width: 100%; object-fit: contain;visibility: hidden;vertical-align: top;" />
+
+
    <div class="picturetobackground">
      <div id="nothing_left">
      </div>
@@ -23,7 +26,7 @@
          <li>Price > $<%= @bike.price_usd %></li>
        </div> 
        <div class="name_bar_logo">
-         <img src="<%= @bike.picturebike %>" style="width: 350px;">
+         <%= image_tag(@bike.picturebike, style:'width: 350px;') %>
        </div>
       </div>
      </div>
@@ -47,7 +50,7 @@
 
   <!-- bike picture -->
 <div id="bike_background">
-<%= image_tag @bike.pictureintro, :style=>"height:100%; width: 100%; object-fit: contain" if @bike.pictureintro? %>
+<%= image_tag @bike.picturetop, :style=>"height:100%; width: 100%; object-fit: contain" if @bike.picturetop.attachment.present? %>
 <!--<img src="/assets/bike/<%= @bike.brand.parameterize.underscore %>/<%= @bike.bike_name.parameterize.underscore %>/<%= @bike.year %>/big2.jpg" style='height:100%; width: 100%; object-fit: contain' /> -->
 </div>
 
