--- a/app/views/newsposts/_form.html.erb
+++ b/app/views/newsposts/_form.html.erb
@@ -3,7 +3,8 @@
 	<p>
 		<%= f.input :title %>
 		<%= f.input :text %>
-		<%= f.file_field :picture %>
+		<%= f.file_field :image %>
+
 	</p>
 	<p>
     	<%= f.submit %>
