--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
         </div>
       </li>
       <!-- <li><a href="clothing.html">Accessory</a></li> -->
-      <li><a href="learning.html">Learning</a></li>
+      <li><%= link_to 'Learning', learns_path%></li>
       <li><a href="touring.html">Touring</a></li>
       <li><%= link_to('Forum', posts_path) %></li>
     </ul>
