--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -33,6 +33,7 @@ a {
 h1 {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 2em;
+    padding-bottom: 25px;
 }
 
 h2 {
@@ -43,6 +44,7 @@ h2 {
 h3 {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.3em;
+    padding-bottom: 10px;
 }
 
 .add_padding {
