--- a/app/assets/stylesheets/learns.scss
+++ b/app/assets/stylesheets/learns.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the Learns controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#learnbackground{
+	margin: auto;
+	max-width: 1000px;
+}
