--- a/app/views/learns/index.html.erb
+++ b/app/views/learns/index.html.erb
@@ -18,7 +18,7 @@
     <% @learns.each do |learn| %>
       <tr>
         <td><%= learn.learntitle %></td>
-        <td><%= link_to 'Show', learn.learntitle %></td>
+        <td><%= link_to 'Show', learn %></td>
         <% if user_signed_in? %>
           <% if current_user.role=="full_admin" %>
             <td><%= link_to 'Edit', edit_learn_path(learn) %></td>
