--- a/app/views/learns/index.html.erb
+++ b/app/views/learns/index.html.erb
@@ -1,35 +1,37 @@
-<h1>Learns</h1>
-<% if user_signed_in? %>
-  <% if current_user.role=="full_admin" %>
-    <p id="notice"><%= notice %></p>
-    <%= link_to 'New Learn', new_learn_path %>
-  <% end %>
-<% end %> 
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @learns.each do |learn| %>
-      <tr>
-        <td><%= learn.learntitle %></td>
-        <td><%= link_to 'Show', learn %></td>
-        <% if user_signed_in? %>
-          <% if current_user.role=="full_admin" %>
-            <td><%= link_to 'Edit', edit_learn_path(learn) %></td>
-            <td><%= link_to 'Destroy', learn, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-        <% end %>
-      </tr>
+<div class="add_padding">
+  <h1>Learns</h1>
+  <% if user_signed_in? %>
+    <% if current_user.role=="full_admin" %>
+      <p id="notice"><%= notice %></p>
+      <%= link_to 'New Learn', new_learn_path %>
     <% end %>
-  </tbody>
-</table>
+  <% end %> 
 
-<br>
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @learns.each do |learn| %>
+        <tr>
+          <td><%= learn.learntitle %></td>
+          <td><%= link_to 'Show', learn %></td>
+          <% if user_signed_in? %>
+            <% if current_user.role=="full_admin" %>
+              <td><%= link_to 'Edit', edit_learn_path(learn) %></td>
+              <td><%= link_to 'Destroy', learn, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% end %>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+</div>
 
 
