--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -5,11 +5,11 @@
 
 <h1>Edit bike</h1>
 
-	<p>
+	   <p>
         <%= f.submit %>
       </p>
 
-	  <p>
+	   <p>
         <%= f.label :bike_name %><br>
         <%= f.text_field :bike_name %>
       </p>
@@ -29,6 +29,9 @@
 
       <p>Input a the picture of the bike in png with transparency :</p>
       <%= f.file_field :picturebike %><br>
+
+      <p>2nd large picture in the bottow</p>
+      <%= f.file_field :picture2 %><br>
 
       <p>
         <%= f.label :year %><br>
@@ -65,53 +68,18 @@
       </p>
 
       <p>
-        <%= f.label :style %><br>
-        <%= f.text_area :style %>
+        <%= f.label :Youtubereview1 %><br>
+        <%= f.text_area :Youtubereview1 %>
       </p>
 
       <p>
-        <%= f.label :style_mark %><br>
-        <%= f.text_field :style_mark %>
+        <%= f.label :Youtubereview2 %><br>
+        <%= f.text_area :Youtubereview2 %>
       </p>
 
       <p>
-        <%= f.label :engine %><br>
-        <%= f.text_area :engine %>
-      </p>
-
-      <p>
-        <%= f.label :engine_mark %><br>
-        <%= f.text_field :engine_mark %>
-      </p>
-
-      <p>
-        <%= f.label :handling %><br>
-        <%= f.text_area :handling %>
-      </p>
-
-      <p>
-        <%= f.label :handling_mark %><br>
-        <%= f.text_field :handling_mark %>
-      </p>
-
-      <p>
-        <%= f.label :comfort %><br>
-        <%= f.text_area :comfort %>
-      </p>
-
-      <p>
-        <%= f.label :comfort_mark %><br>
-        <%= f.text_field :comfort_mark %>
-      </p>
-
-        <p>
-        <%= f.label :value %><br>
-        <%= f.text_area :value %>
-      </p>
-
-      <p>
-        <%= f.label :value_mark %><br>
-        <%= f.text_field :value_mark %>
+        <%= f.label :Youtubereview3 %><br>
+        <%= f.text_area :Youtubereview3 %>
       </p>
 
       <p>
@@ -119,13 +87,7 @@
         <%= f.text_area :conclusion %>
       </p>
 
- 
-
-      
-
-  
-
-<p>
+      <p>
         <%= f.submit %>
       </p>
 
