--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -32,8 +32,8 @@
 
       <% if user_signed_in? %>
         <% if current_user.role=="full_admin" %>
-          <td><%= image_tag(bike.picturetop, width: '120') if bike.picturebike.attachment.present? %></td>
-          <td><%= image_tag(bike.picture2, width: '120') if bike.picturebike.attachment.present? %></td>
+          <td><%= image_tag(bike.picturetop, width: '120') if bike.picturetop.attachment.present? %></td>
+          <td><%= image_tag(bike.picture2, width: '120') if bike.picture2.attachment.present? %></td>
           <% if !bike.Youtubereview1.blank? %>
             <td>youtubereview1
           <% end %>
