--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
       <!-- <li><a href="news.html"> Safety </a></li> -->
       <li class="dropdown">
         <%= link_to 'Bikes', bikes_path, :class => "dropbtn"%>
-        <div class="dropdown-content">
+        <!--<div class="dropdown-content">
          <div class="columni">
           <a href="#">BMW</a>
           <a href="#">Ducati</a>
@@ -86,14 +86,6 @@
           <a href="#">Kawazaki</a>
           <a href="#">Suzuki</a>
           <a href="#">Yamaha</a>
-
-          <!-- <a href="#"><= BrandBikeDb.find(2).brand_name %></a>
-          <a href="#"><= BrandBikeDb.find(3).brand_name %></a>
-          <a href="#"><= BrandBikeDb.find(4).brand_name %></a>
-          <a href="#"><= BrandBikeDb.find(5).brand_name %></a>
-          <a href="#"><= BrandBikeDb.find(6).brand_name %></a>
-          <a href="#"><= BrandBikeDb.find(7).brand_name %></a>
-          <a href="#"><= BrandBikeDb.find(8).brand_name %></a> -->
         </div>
         <div class="columni">
           <a href="#">Cruiser</a>
@@ -102,10 +94,9 @@
           <a href="#">Touring</a>
         </div>
         </div>
-      </li>
-      <!-- <li><a href="clothing.html">Accessory</a></li> -->
+      </li> -->
       <li><%= link_to 'Learning', learns_path%></li>
-      <li><a href="touring.html">Touring</a></li>
+      <!--<li><a href="touring.html">Touring</a></li>-->
       <li><%= link_to('Forum', posts_path) %></li>
     </ul>
   </div>
