--- a/app/views/logos/index.html.erb
+++ b/app/views/logos/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -14,6 +14,7 @@
     <% @logos.each do |logo| %>
       <tr>
         <td><%= logo.name %></td>
+        <td><%= image_tag logo.image if logo.image.attachment.present? %></td>
         <td><%= link_to 'Show', logo %></td>
         <td><%= link_to 'Edit', edit_logo_path(logo) %></td>
         <td><%= link_to 'Destroy', logo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
