--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -22,7 +22,8 @@
   <% @bikes.each do |bike| %>
     <tr onmouseover="this.style.cursor='pointer'" onClick="window.location.href='<%= bike_path(bike) %>';">
       <td><%= bike.brand %></td>
-      <td><%= bike.bike_name %></td>
+
+      <td><%= link_to bike.bike_name, bike_path(bike) %></td>
       <td><%= image_tag(bike.picturebike, width: '120') if bike.picturebike.attachment.present? %></td>
       <td><%= bike.bike_type %></td>
       <td><%= bike.cylinder_cc %> CC</td>
