change font table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,6 +122,6 @@
   </body>
 
   <footer>
-  	<p>Full throttle 2018  |  all right reserved | contact : full.throttle.motorcycle@gmail.com</p>
+  	<p class="colored_dark_gray">Full throttle 2018  |  all right reserved | contact : full.throttle.motorcycle@gmail.com</p>
   </footer>
 </html>
