--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -96,3 +96,17 @@ select {
     box-shadow: 0px 0px 26px -7px rgba(0,0,0,0.75)
 }
 
+/*------------footer ------------------*/
+footer { 
+    background-color: #f2f2f2; 
+    padding: 30px 0px 30px 0px;
+}
+
+footer p { 
+    color: black;
+    margin: auto;
+    width: 50%;
+    width: 1000px;
+    
+}
+
