--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -1,5 +1,5 @@
 tbody>tr:hover {
-	background-color: #f5f5f5
+	background-color: #fafafa
 }
 
 th, td {
@@ -8,9 +8,13 @@ th, td {
 }
 
 thead{
-    background-color: red;
+    background-color: #ae1228;
+    padding: 30px 0px 30px 0px;
+    line-height: 3em;
+    color: white;
 }
 
 table {
     width: 100%;
+    border-collapse: collapse;
 }
