--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -23,7 +23,7 @@
     <tr onmouseover="this.style.cursor='pointer'" onClick="window.location.href='<%= bike_path(bike) %>';">
       <td><%= bike.brand %></td>
 
-      <td><%= link_to bike.bike_name, bike_path(bike) %></td>
+      <td><%= bike.bike_name %></td>
       <td><%= image_tag(bike.picturebike, width: '120') if bike.picturebike.attachment.present? %></td>
       <td><%= bike.bike_type %></td>
       <td><%= bike.cylinder_cc %> CC</td>
