change font table

--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -14,7 +14,7 @@
     color: #888888;
 }
 
-p {
+p, th, td {
     font-family: 'Source Sans Pro', sans-serif;
     text-align: justify;
     font-size: 1.1em;
@@ -107,6 +107,6 @@ footer p {
     margin: auto;
     width: 50%;
     width: 1000px;
-    
+
 }
 
