--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,22 @@
+body
+{
+	margin: auto;
+}
+
+* {
+	margin: 0;
+	/*padding: 0;*/
+}
+
+
+.flexi
+{
+	display:flex;
+	justify-content:space-around;
+
+}
+
+
 /*------------footer ------------------*/
 footer { 
     background-color: #f2f2f2; 
@@ -8,6 +27,6 @@ footer p {
     color: black;
     margin: auto;
     width: 50%;
-    width: 1000px;
+    max-width: 1000px;
 
 }
