--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -14,10 +14,21 @@
     color: #888888;
 }
 
-p, th, td {
+
+@media screen and (min-width: 320px) {
+  p, th, td, li {
+    font-size: calc(16px + (22 - 16) * ((100vw - 320px) / (1000-320)));
     font-family: 'Source Sans Pro', sans-serif;
     text-align: justify;
-    font-size: 1.1em;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  p, th, td, li {
+    font-size: 22px;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: justify;
+  }
 }
 
 label {
@@ -30,29 +41,88 @@ a {
     text-decoration: none;
 }
 
-h1 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2em;
-    padding-bottom: 25px;
+@media screen and (min-width: 320px) {
+    h1 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: calc(29px + (40 - 29) * ((100vw - 320px) / (1000-320)));
+        padding-bottom: calc(5px + (25 - 5) * ((100vw - 320px) / (1000-320)));
+    }
 }
 
-h2 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.6em;
+@media screen and (min-width: 1000px) {
+    h1 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 40px;
+        padding-bottom: 25px;
+    }
 }
 
-h3 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.3em;
-    padding-bottom: 10px;
+@media screen and (min-width: 320px) {
+    h2 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: calc(23px + (32 - 23) * ((100vw - 320px) / (1000-320)));
+        padding-bottom: calc(2px + (17 - 2) * ((100vw - 320px) / (1000-320)));
+    }
 }
 
-.add_padding {
-    padding: 30px 30px 30px 30px;
+@media screen and (min-width: 1000px) {
+    h2 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 32px;
+        padding-bottom: 17px;
+    }
 }
 
-.add_padding_top_bottom {
-    padding: 30px 0px 30px 0px;
+@media screen and (min-width: 320px) {
+    h3 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: calc(19px + (26 - 19) * ((100vw - 320px) / (1000-320)));
+        padding-bottom: calc(2px + (10 - 2) * ((100vw - 320px) / (1000-320)));
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    h3 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 26px;
+        padding-bottom: 10px;
+    }
+}
+
+@media screen and (min-width: 320px) {
+    .add_padding {
+            padding-top: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-right: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-bottom: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-left: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
+        }
+}
+
+@media screen and (min-width: 1000px) {
+    .add_padding {
+            padding-top: 30px;
+            padding-right: 30px;
+            padding-bottom: 30px;
+            padding-left: 30px;
+        }
+}
+
+@media screen and (min-width: 320px) {
+    .add_padding_top_bottom {
+            padding-top: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-right: 0px;
+            padding-bottom: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-left: 0px;
+        }
+}
+
+@media screen and (min-width: 1000px) {
+    .add_padding_top_bottom {
+            padding-top: 30px;
+            padding-right: 0px;
+            padding-bottom: 30px;
+            padding-left: 0px;
+        }
 }
 
 ul {
