--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,6 +124,10 @@
   </body>
 
   <footer>
-  	<p class="colored_dark_gray">Full throttle 2018  |  all right reserved | contact : full.throttle.motorcycle@gmail.com</p>
+    <div class="maxwidth800">
+    	<h6 class="colored_dark_gray">
+        Full throttle 2018  |  all right reserved | contact : full.throttle.motorcycle@gmail.com
+      </h6>
+    </div>
   </footer>
 </html>
