--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -90,6 +90,24 @@ a {
 }
 
 @media screen and (min-width: 320px) {
+    h6 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: calc(10px + (16 - 10) * ((100vw - 320px) / (1000-320)));
+        padding-bottom: calc(2px + (10 - 2) * ((100vw - 320px) / (1000-320)));
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    h6 {
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 16px;
+    }
+}
+
+
+
+
+@media screen and (min-width: 320px) {
     .add_padding {
             padding-top: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
             padding-right: calc(2px + (30 - 2) * ((100vw - 320px) / (1000-320)));
@@ -165,10 +183,3 @@ select {
 .pic_shadow{
     box-shadow: 0px 0px 26px -7px rgba(0,0,0,0.75)
 }
-
-/* MEDIA QUERIES */
-@media screen and (max-width: 500px){
-    
-}
-
-
