--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,5 +1,4 @@
-body
-{
+body{
 	margin: auto;
 }
 
@@ -9,8 +8,7 @@ body
 }
 
 
-.flexi
-{
+.flexi{
 	display:flex;
 	justify-content:space-around;
 
@@ -23,16 +21,15 @@ body
 }
 
 
+.maxwidth800{
+    margin: auto;
+    max-width: 800px;
+
+}
+
 /*------------footer ------------------*/
 footer { 
     background-color: #f2f2f2; 
-    padding: 30px 0px 30px 0px;
+    padding: 15px 0px 15px 0px;
 }
 
-footer p { 
-    color: black;
-    margin: auto;
-    width: 50%;
-    max-width: 1000px;
-
-}
