--- a/app/assets/stylesheets/bikes.scss
+++ b/app/assets/stylesheets/bikes.scss
@@ -19,12 +19,10 @@
 }
 
 #inside_menu{
-    font-size: 2em;
     list-style: none;
     font-family: "Roboto",sans-serif;
     border-left: 3px solid white;
     border-right: 3px solid white;
-    padding: 20px;
     background: rgba(255, 255, 255, .8); 
 } 
 
@@ -32,21 +30,41 @@
     flex:1;
 }
 
-.name_bar_logo
-{
+.name_bar_logo{
 display: flex;
     justify-content: center;
     align-items: center;
-    /*height: 100px;*/
-    /*width: 150px;*/
 }
 
-#name_bar_title
-{
+#name_bar_title{
     text-align: left;
-    font-size: 1em;
     vertical-align: middle;
-    line-height: 100px;
+}
+
+
+@media screen and (min-width: 320px) {
+  .bikepicwidth{
+    width: calc(100vw * 350 / 1000);
+
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .bikepicwidth{
+    width: 350px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .logopicwidth{
+    height: calc(100vw * 100 / 1000);
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .logopicwidth{
+    height: 100px;
+  }
 }
 
 
