--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -134,6 +134,25 @@ a {
         }
 }
 
+
+@media screen and (min-width: 320px) {
+    .add_padding20 {
+            padding-top: calc(2px + (20 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-right: 0px;
+            padding-bottom: calc(2px + (20 - 2) * ((100vw - 320px) / (1000-320)));
+            padding-left: 0px;
+        }
+}
+
+@media screen and (min-width: 1000px) {
+    .add_padding20 {
+            padding-top: 20px;
+            padding-right: 20px;
+            padding-bottom: 20px;
+            padding-left: 20px;
+        }
+}
+
 @media screen and (min-width: 1000px) {
     .add_padding_top_bottom {
             padding-top: 30px;
