--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -10,7 +10,7 @@
       <th>Brand</th>
       <th>Name</th>
       <th>Picture</th>
-      <th>Type</th>
+      <th class="mobileHide">Type</th>
       <th class="mobileHide">Cyclinder</th>
       <th class="mobileHide" >Horse Power</th>
       <th class="mobileHide">Weight</th>
