--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -25,7 +25,7 @@
 
       <td><%= bike.bike_name %></td>
       <td><%= image_tag(bike.picturebike, width: '120') if bike.picturebike.attachment.present? %></td>
-      <td class="mobileHide">><%= bike.bike_type %></td>
+      <td class="mobileHide"><%= bike.bike_type %></td>
       <td class="mobileHide"><%= bike.cylinder_cc %> CC</td>
       <td class="mobileHide"><%= bike.power_hp %></td>
       <td class="mobileHide"><%= bike.weight_lb %></td>
