--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -14,7 +14,7 @@ body{
 
 }
 
-@media screen and (max-device-width : 500px) {
+@media screen and (max-width : 500px) {
      .mobileHide {
         display: none;
      }
