--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -68,7 +68,9 @@
           </div>
         </div>
         <div class="text_right">
-          <%= raw @bike.Youtubereview1 %>
+          <div class="videoWrapper">
+            <%= raw @bike.Youtubereview1 %>
+          </div>
         </div>
       </div>
 
