--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
     <%= yield %>
   </body>
 
-  <footer>
+  <footer class="add_padding20">
     <div class="maxwidth800">
     	<h6 class="colored_dark_gray">
         Full throttle 2018  |  all right reserved | contact : full.throttle.motorcycle@gmail.com
