--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -44,8 +44,9 @@ a {
 @media screen and (min-width: 320px) {
     h1 {
         font-family: 'Source Sans Pro', sans-serif;
-        font-size: calc(29px + (40 - 29) * ((100vw - 320px) / (1000-320)));
+        font-size: calc(27px + (40 - 27) * ((100vw - 320px) / (1000-320)));
         padding-bottom: calc(5px + (25 - 5) * ((100vw - 320px) / (1000-320)));
+        padding-left: 2px;
     }
 }
 
@@ -60,8 +61,9 @@ a {
 @media screen and (min-width: 320px) {
     h2 {
         font-family: 'Source Sans Pro', sans-serif;
-        font-size: calc(23px + (32 - 23) * ((100vw - 320px) / (1000-320)));
+        font-size: calc(22px + (32 - 22) * ((100vw - 320px) / (1000-320)));
         padding-bottom: calc(2px + (17 - 2) * ((100vw - 320px) / (1000-320)));
+        padding-left: 2px;
     }
 }
 
@@ -78,6 +80,7 @@ a {
         font-family: 'Source Sans Pro', sans-serif;
         font-size: calc(19px + (26 - 19) * ((100vw - 320px) / (1000-320)));
         padding-bottom: calc(2px + (10 - 2) * ((100vw - 320px) / (1000-320)));
+        padding-left: 2px;
     }
 }
 
@@ -94,6 +97,7 @@ a {
         font-family: 'Source Sans Pro', sans-serif;
         font-size: calc(8px + (16 - 8) * ((100vw - 320px) / (1000-320)));
         padding-bottom: calc(2px + (10 - 2) * ((100vw - 320px) / (1000-320)));
+        padding-left: 2px;
     }
 }
 
